add endpoint /queries
